Refactoring du code